--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <title> Sean's Personal Page <title>
+  </head>
+  <body>
+    <p> Hello, welcome to my webpage. I am a student at University at Buffalo. I am currently majoring in Computer Science
+        and is creating this web page for CSE 199. I just had CSE 115 before this class. I used to swim and I am a certified
+      life guard.</p>
+  </body>
+</html>
