--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title> Sean's Personal Page <title>
+    <title> Sean's Personal Page </title>
   </head>
   <body>
     <p> Hello, welcome to my webpage. I am a student at University at Buffalo. I am currently majoring in Computer Science
