--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <title> Sean's Personal Page </title>
   </head>
   <body>
+    <h1> Sean Chiu </h1>
     <p> Hello, welcome to my webpage. I am a student at University at Buffalo. I am currently majoring in Computer Science
         and is creating this web page for CSE 199. I just had CSE 115 before this class. I used to swim and I am a certified
-      life guard.</p>
+      life guard. I may or may not know what I am doing most of the time. My usual in-game-name (ign) is iCheerios.</p>
+    <ul> My favorite things to do:
+      <li> Eat </li>
+      <li> Swim </li>
+      <li> Play Badminton </li>
+      <li> Sleep </li>
+      <li> Play Video Games </li>
+      <li> Hang out with family </li>
+    </ul>
   </body>
 </html>
