--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1> Sean Chiu </h1>
+    <img src = "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSRA5-2-xYEpsZMIiskCNiWAPlIdBlWgVLfYM48k-pTcwp147LYy45tDXaOqw"/>
     <p> Hello, welcome to my webpage. I am a student at University at Buffalo. I am currently majoring in Computer Science
         and is creating this web page for CSE 199. I just had CSE 115 before this class. I used to swim and I am a certified
       life guard. I may or may not know what I am doing most of the time. My usual in-game-name (ign) is iCheerios.</p>
