Most of Page pt 3

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> Sean's Personal Page </title>
   </head>
   <body>
-    <h1> Sean Chiu </h1>
+    <h1> Sean Chiu a Nerd </h1>
     <img src = "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSRA5-2-xYEpsZMIiskCNiWAPlIdBlWgVLfYM48k-pTcwp147LYy45tDXaOqw"/>
     <p> Hello, welcome to my webpage. I am a student at University at Buffalo. I am currently majoring in Computer Science
         and is creating this web page for CSE 199. I just had CSE 115 before this class. I used to swim and I am a certified
@@ -16,5 +16,6 @@
       <li> Sleep </li>
       <li> Play Video Games </li>
       <li> Hang out with family </li>
+    <div> My League of Legends Profile <a href = "http://na.op.gg/summoner/userName=iCheerios"> found here </a> </div>
   </body>
 </html>
