Most of Page pt 4

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li> Play Video Games </li>
       <li> Hang out with family </li>
     <div> </div>
+    <div> </div>
     <div> My League of Legends Profile <a href = "http://na.op.gg/summoner/userName=iCheerios"> found here </a> </div>
   </body>
 </html>
