Most of Page pt 4

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         and is creating this web page for CSE 199. I just had CSE 115 before this class. I used to swim and I am a certified
       life guard. I may or may not know what I am doing most of the time. My usual in-game-name (ign) is iCheerios.</p>
     <div> My League of Legends Profile <a href = "http://na.op.gg/summoner/userName=iCheerios"> found here </a> </div>
+    <div> </div>
     <div> My favorite things to do: </div>
       <li> Eat </li>
       <li> Swim </li>
