--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <link rel = "Stylesheet" type = "text/css" href="style.css">
     <title> Sean's Personal Page </title>
   </head>
   <body>
