--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p> Hello, welcome to my webpage. I am a student at University at Buffalo. I am currently majoring in Computer Science
         and is creating this web page for CSE 199. I just had CSE 115 before this class. I used to swim and I am a certified
       life guard. I may or may not know what I am doing most of the time. My usual in-game-name (ign) is iCheerios.</p>
-    <div> My League of Legends Profile <a href = "http://na.op.gg/summoner/userName=iCheerios"> found here </a> </div>
+    <div> My League of Legends Profile <a class = "hidden-links" href = "http://na.op.gg/summoner/userName=iCheerios"> found here </a> </div>
     <p> </p>
     <div> My favorite things to do: </div>
       <li> Eat </li>
