--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sean's Personal Page</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css, style.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -19,7 +19,7 @@
     <![endif]-->
   </head>
   <body>
-    <h1> Sean Chiu a Nerd </h1>
+    <strong> <u> Sean Chiu a Nerd </u> </strong>
     <img src = "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSRA5-2-xYEpsZMIiskCNiWAPlIdBlWgVLfYM48k-pTcwp147LYy45tDXaOqw"/>
     <p> Hello, welcome to my webpage. I am a student at University at Buffalo. I am currently majoring in Computer Science
         and is creating this web page for CSE 199. I just had CSE 115 before this class. I used to swim and I am a certified
