--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
   </head>
   <body>
-    <pre> <strong> <u> <div class = "center-block"> Sean Chiu a Nerd </div> </u> </strong> </pre>
+    <div class = "center-block, text-primary"> Sean Chiu a Nerd </div>
     <img src = "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSRA5-2-xYEpsZMIiskCNiWAPlIdBlWgVLfYM48k-pTcwp147LYy45tDXaOqw"/>
     <p> Hello, welcome to my webpage. I am a student at University at Buffalo. I am currently majoring in Computer Science
         and is creating this web page for CSE 199. I just had CSE 115 before this class. I used to swim and I am a certified
