--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 			
 			<div class = "collapse navbar-collapse" id = "navBar">
 				<ul class = "nav navbar-nav">
-					<li class = "active"> <a href = "final.html"> Home </a> </li>
-					<li> <a href = "finalAbout.html"> About </a> </li>
-					<li> <a href = "finalProjects.html"> Projects </a> </li>
+					<li class = "active"> <a href = "index.html"> Home </a> </li>
+					<li> <a href = "about.html"> About </a> </li>
+					<li> <a href = "projects.html"> Projects </a> </li>
 				</ul>
 			</div>
 			
