--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
  <!DOCTYPE html>
 <html lang="en">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,6 +14,10 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
+<noscript>
+	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+	</noscript>
   <body>
 <!--    <div class = "text-center text-primary heading"> <strong> Sean Chiu a Nerd </strong> </div>
     <p class = "text-center"> <img src = "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSRA5-2-xYEpsZMIiskCNiWAPlIdBl WgVLfYM48k-pTcwp147LYy45tDXaOqw"/> </p>
