--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
 		</div>
 		<div class = "row"> 
 			<button class = "col-md-3 col-xs-3 btn btn-primary" onclick = "incrementMoney(0)"> Add Quarter </button>
-			<button class = "col-md-3 col-xs-3 btn btn-secondary" onclick = "incrementMoney(1)"> Add Dime </button>
-			<button class = "col-md-3 col-xs-3" onclick = "incrementMoney(2)"> Add Nickel </button>
-			<button class = "col-md-3 col-xs-3" onclick = "incrementMoney(3)">  Add Penny </button>
+			<button class = "col-md-3 col-xs-3 btn btn-primary" onclick = "incrementMoney(1)"> Add Dime </button>
+			<button class = "col-md-3 col-xs-3 btn btn-primary" onclick = "incrementMoney(2)"> Add Nickel </button>
+			<button class = "col-md-3 col-xs-3 btn btn-primary" onclick = "incrementMoney(3)">  Add Penny </button>
 		</div>
 		<div class = "row"> 
-			<button class = "col-md-3 col-xs-3" onclick = "incrementMoney(4)"> Minus Quarter </button>
-			<button class = "col-md-3 col-xs-3" onclick = "incrementMoney(5)"> Minus Dime </button>
-			<button class = "col-md-3 col-xs-3" onclick = "incrementMoney(6)"> Minus Nickel </button>
-			<button class = "col-md-3 col-xs-3" onclick = "incrementMoney(7)">  Minus Penny </button>
+			<button class = "col-md-3 col-xs-3 btn btn-primary" onclick = "incrementMoney(4)"> Minus Quarter </button>
+			<button class = "col-md-3 col-xs-3 btn btn-primary" onclick = "incrementMoney(5)"> Minus Dime </button>
+			<button class = "col-md-3 col-xs-3 btn btn-primary" onclick = "incrementMoney(6)"> Minus Nickel </button>
+			<button class = "col-md-3 col-xs-3 btn btn-primary" onclick = "incrementMoney(7)">  Minus Penny </button>
 		</div>
 	</div>
 
