--- a/about.html
+++ b/about.html
@@ -125,6 +125,9 @@
 							<div>
 								Favorite Role: ADC, Jungle | I AM THE FLAMER AND FLAMED
 							</div>
+							<div>
+								My League of Legends Profile <a class = "hidden-links" href = "http://na.op.gg/summoner/userName=iCheerios"> found here </a>
+							</div>
 						</small>
 					</h4>
 					<h4>
