--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	<div class = "container-fluid">
 		<h1>
 			<div class = "text-center text-primary heading text-underline"> 
-					<strong style = "color: gray"> 
+					<strong style = "color: white"> 
 						<u> 
 							Sean Chiu a Nerd 
 						</u> 
@@ -132,14 +132,14 @@
 			</div>
 		</h1>
 		
-		<div class = "text-center container" style = "color: gray">
+		<div class = "text-center container" style = "color: white">
 			<p class = "text-center img-responsive" > <img src = "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSRA5-2-xYEpsZMIiskCNiWAPlIdBl WgVLfYM48k-pTcwp147LYy45tDXaOqw" width = "250" height = "250"/> </p>
 			<p> Hello, welcome to my webpage. I am a student at University at Buffalo. I am currently majoring in Computer Science
 				and is creating this web page for CSE 199. I just had CSE 115 before this class. I used to swim and I am a certified
 			  life guard. I may or may not know what I am doing most of the time. My usual in-game-name (ign) is iCheerios.</p>
 	</div>
 	
-	<div class = "text-center container" style = "color: gray">
+	<div class = "text-center container" style = "color: white">
 		<h2> <u> Let me add up your coin values </u> </h2>
 		<h3 id = "totalMoney"> Total: $0.00 </h3>
 		<div class = "row"> 
