--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
 			<div class = "col-md-3" id = "numNickel">  Nickels : 0 </div>
 			<div class = "col-md-3" id = "numPenny">  Pennies : 0 </div>
 		</div>
-		<div class = "row"> 
+		<div class = "row" style = "color: black"> 
 			<button class = "col-md-3 col-xs-3 " onclick = "incrementMoney(0)"> Add Quarter </button>
 			<button class = "col-md-3 col-xs-3 " onclick = "incrementMoney(1)"> Add Dime </button>
 			<button class = "col-md-3 col-xs-3 " onclick = "incrementMoney(2)"> Add Nickel </button>
 			<button class = "col-md-3 col-xs-3 " onclick = "incrementMoney(3)">  Add Penny </button>
 		</div>
-		<div class = "row"> 
+		<div class = "row" style = "color: black"> 
 			<button class = "col-md-3 col-xs-3 " onclick = "incrementMoney(4)"> Minus Quarter </button>
 			<button class = "col-md-3 col-xs-3 " onclick = "incrementMoney(5)"> Minus Dime </button>
 			<button class = "col-md-3 col-xs-3 " onclick = "incrementMoney(6)"> Minus Nickel </button>
