--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
 		</div>
 	</nav>
 	
-	<div class = "container-fluid">
+	<div class = "container-fluid" style = "color: white">
 		<h3>
 					Project #1 - Mini-RPG:
 				</h3>
