--- a/about.html
+++ b/about.html
@@ -59,9 +59,9 @@
 		</div>
 	</nav>
 	
-	<div class = "container-fluid">
+	<div class = "container-fluid" style = "color: white">
 		<h1>
-			<div style = "color: white" class = "text-center text-primary heading text-underline"> 
+			<div class = "text-center text-primary heading text-underline"> 
 				<h3>
 					Name:
 				</h3>
