--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
 		</div>
 	</nav>
 	
-	<div class = "container-fluid" style = "color: white">
-		<h1>
+	<div class = "container-fluid">
+		<h1 style = "color: white">
 			<div class = "text-center text-primary heading text-underline"> 
 				<h3>
 					Name:
