--- a/projects.html
+++ b/projects.html
@@ -60,16 +60,18 @@
 	</nav>
 	
 	<div class = "container-fluid" style = "color: white">
-		<h3>
-					Project #1 - Mini-RPG:
-				</h3>
-					<h4>
-						<small>
-							Status: Work in Progress (like 0.5% completed)
-						</small>
-					</h4>
-		<h1>
-			<strong> SADLY I'M NOT WORKING ON ANY MORE PROJECTS AT THE MOMENT, I AM SURE AS I PROGRESS IN MY STUDIES AT THE UNIVERSITY AT BUFFALO, THIS PAGE WILL BE FILLED MORE. WILL KEEP YOU POSTED</strong>
+		<h1 style = "color: white">
+			<h3>
+						Project #1 - Mini-RPG:
+					</h3>
+						<h4>
+							<small>
+								Status: Work in Progress (like 0.5% completed)
+							</small>
+						</h4>
+			<h2>
+				<strong> SADLY I'M NOT WORKING ON ANY MORE PROJECTS AT THE MOMENT, I AM SURE AS I PROGRESS IN MY STUDIES AT THE UNIVERSITY AT BUFFALO, THIS PAGE WILL BE FILLED MORE. WILL KEEP YOU POSTED</strong>
+			</h2>
 		</h1>
 	</div>
 
