--- a/projects.html
+++ b/projects.html
@@ -60,12 +60,12 @@
 	</nav>
 	
 	<div class = "container-fluid" style = "color: white">
-		<h1 style = "color: white">
+		<h1>
 			<h3>
 						Project #1 - Mini-RPG:
 					</h3>
 						<h4>
-							<small>
+							<small style = "color: white">
 								Status: Work in Progress (like 0.5% completed)
 							</small>
 						</h4>
