--- a/about.html
+++ b/about.html
@@ -60,8 +60,8 @@
 	</nav>
 	
 	<div class = "container-fluid">
-		<h1>
-			<div class = "text-center text-primary heading text-underline" style = "color: white"> 
+		<h1 style = "color: white">
+			<div class = "text-center text-primary heading text-underline"> 
 				<h3>
 					Name:
 				</h3>
