--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 	
 	<div class = "container-fluid">
 		<h1>
-			<div class = "text-center text-primary heading text-underline"> 
+			<div class = "text-center text-primary heading text-underline" style = "color: white"> 
 				<h3>
 					Name:
 				</h3>
